--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ footer_text: >
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
   Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 
-icon:  # the emoji used as the favicon
+icon: 🤖 # the emoji used as the favicon
 url:  # the base hostname & protocol for your site
 baseurl: / # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
@@ -75,31 +75,31 @@ panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Olivia Watkins  # your blog must have a name for it to show up in the nav bar
-blog_description: Personal homepage for Olivia Watkins
-permalink: /:year/:title/
+# blog_name: #Olivia Watkins  # your blog must have a name for it to show up in the nav bar
+# blog_description: #Personal homepage for Olivia Watkins
+# permalink: #/blog/:year
 
-# Pagination
-pagination:
-  enabled: true
+# # Pagination
+# pagination:
+#   enabled: true
 
-# Comments
-disqus_shortname: #al-folio # put your disqus shortname
-# https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+# # Comments
+# disqus_shortname: al-folio # put your disqus shortname
+# # https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 # -----------------------------------------------------------------------------
 # Collections
 # -----------------------------------------------------------------------------
 
 collections:
-  news:
-    defaults:
-      layout: post
-    output: true
-    permalink: /news/:path/
-  # projects:
+  # news:
+  #   defaults:
+  #     layout: post
   #   output: true
-  #   permalink: /projects/:path/
+  #   permalink: /news/:path/
+  projects:
+    output: true
+    permalink: /projects/:path/
 
 news_limit: 5
 
@@ -122,7 +122,7 @@ kramdown:
       start_line: 1
 
 # Includes & excludes
-include: ['_pages']
+include: ['_pages/about.md']
 exclude:
   - bin
   - Gemfile
@@ -153,8 +153,8 @@ github: [metadata]
 
 scholar:
 
-  last_name: Einstein
-  first_name: [Albert, A.]
+  last_name: [Watkins, Watkins*]
+  first_name: [Olivia, O.]
 
   style: apa
   locale: en
